Floating object animation done

--- a/Android Projects/EgorHelminth/app/src/main/res/layout/main_activity.xml
+++ b/Android Projects/EgorHelminth/app/src/main/res/layout/main_activity.xml
@@ -43,4 +43,9 @@
             android:onClick="moveRight"/>
     </LinearLayout>
 
+    <TextView
+        android:id="@+id/errorText"
+        android:layout_width="match_parent"
+        android:layout_height="70dp"/>
+
 </RelativeLayout>
